# mahjong

./: .clang-format  .gitignore  CMakeLists.txt
code/: assetManager.cpp  assetManager.h  button.cpp  button.h  card.cpp  card.h  data.h  forms.h  gameField.cpp  gameField.h  gamemode.cpp  gamemode.h  main.cpp
